# Storagescope

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  RELEASING.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: labeler.yml  pr-checks.yml  release-assets.yml  stale.yml
src/: app.rs  cli.rs  delete.rs  errors.rs  lib.rs  main.rs  model.rs  platform.rs  theme.rs  ui.rs
src/scanner/: mod.rs  worker.rs
tests/: scan_integration.rs
