[package]
name = "storagescope"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TreeSize-like terminal disk usage analyzer"
readme = "README.md"
repository = "https://github.com/limbon2/Storagescope"
homepage = "https://github.com/limbon2/Storagescope"
documentation = "https://github.com/limbon2/Storagescope#readme"
exclude = ["screenshot.png"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
libc = "0.2.182"
parking_lot = "0.12.5"
ratatui = "0.29.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
